--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
   "scripts": {
     "test": "grunt qunit"
   },
+  "keywords": [
+    "jquery-plugin",
+    "sort",
+    "filter",
+    "arrange",
+    "items"
+  ],
   "devDependencies": {
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-qunit": "~0.2.0",
